web/static/style.less
// solarized
@base03:    rgb(0, 43, 54);
@base02:    rgb(7, 54, 66);
@base01:    rgb(88, 110, 117);
@base00:    rgb(101, 123, 131);
@base0:     rgb(131, 148, 150);
@base1:     rgb(147, 161, 161);
@base2:     rgb(238, 232, 213);
@base3:     rgb(253, 246, 227);
@yellow:    rgb(181, 137, 0);
@orange:    rgb(203, 75, 22);
@red:       rgb(220, 50, 47);
@magenta:   rgb(211, 54, 130);
@violet:    rgb(108, 113, 196);
@blue:      rgb(38, 139, 210);
@cyan:      rgb(42, 161, 152);
@green:     rgb(133, 153, 0);

html {
    font-size: calc(~"6pt + 0.5vw");
    text-size-adjust: none;
}

.solarized-dark() {
    background-color: @base03;
    color: @base0;
}

.solarized-light() {
    background-color: @base3;
    color: @base00;
}

.tabcontent {
    -webkit-animation: fadeEffect 1s;
    animation: fadeEffect 1s; /* Fading effect takes 1 second */
}

@-webkit-keyframes fadeEffect {
    from {opacity: 0;}
    to {opacity: 1;}
}

#tabs  {
    .tablinks  {
        display: flex;
        justify-content: center;
        align-items: center;
        vertical-align:middle;
        text-align:center; 
        flex-grow: 1;
        //width: 100% / 6;
        overflow: visible;
        //position: static;
        background-color: inherit;
        border: none;
        outline: none;
        cursor: pointer;
        transition: 0.3s;
        color: @base0;
        background-color: @base03;
        // for mobile
        // https://stackoverflow.com/questions/15649244/responsive-font-size
        // https://css-tricks.com/viewport-sized-typography/
        font-size: ~"calc(5pt + 0.6vw)";

    }
    .tablinks:hover {
        background-color: @base02;
        color: @red;
    }

    .tablinks.active {
        background-color: @base3;
    }
    max-height: 50px;
    min-height: 30px;
    //flex-direction: row;
    //align-items: stretch;
    display: flex;
align-content: stretch;
    //border: 1px solid #ccc;
    background-color: @base03;
    width: 100%;
}





@keyframes fadeEffect {
    from {opacity: 0;}
    to {opacity: 1;}
    float: center;
}


#AttendanceOverview {
    #attendanceOverviewContent {
    
    }
}

#the-key-heading {
    //height: 25px;
    margin-left: 2.5%;
    font-size: 1.25em;
    font-weight: bold;
    color: @red;
    text-align: left;
    vertical-align: middle;
}


.secondaryInfo {
    background-color: @base2;
    padding: 5px;
}




th {
    text-align: left;
    background-color: @base2;
}

th, td {
    border-bottom: 1px solid #ddd;
}



tr:nth-child(even) {background-color: @base2}

h4 {
    color: @blue
}

#popUpHeader {
    text-align: center;
}

#close {
    
    float: left;
    padding: 5px;
    border: 5px solid white;
    bottom: 0;
}

#StudentProfiles {
    .studentInfo {
        position: absolute;
        width: 400px;
        height: 250px;
        z-index: 15;
        top: 50%;
        left: 50%;
        margin: -10px 0 0 -150px;
        display: none; /* Hidden by default */
        //position: fixed; /* Stay in place */
        //z-index: 1; /* Sit on top */
        //left: 0;
        //top: 0;
        //width: 50%; /* Full width */
        //height: 50%; /* Full height */
        overflow: auto; /* Enable scroll if needed */
        background-color: white; /* Fallback color */
        //border: 2px solid black;
        //margin: auto;
    }
    
    #saveStudentData {
        display: none;
    }
    #saveColumnData {
        display: none;
    }
    #saveStudentColumnData {
        display: none;
    }
}


.tabishButton  {
    //max-height: 50px;
    //width: 16.6666%;
    font-size: ~"calc(5pt + 0.6vw)";
    //padding-left: 2px;
    //padding-top:  2px;
    background-color: #fefbf6;
    //background-color: @base3;
    color: @cyan;
}

.tabishButton:hover {
    background-color: @base2;
    //color: @base1;
}

#Data  {
    #leftStuff {
        float: left;
        width: 60%
    }

    #rightStuff {
        position: relative;
        top: 5px;
        display: flex;
        width: 40%;
        flex-flow: row-reverse wrap;
        justify-content: space-around;
    }




    #submitStudent {
        float: right;
        padding: 5px;
        border: 5px solid white;
        bottom: 0;
    }
   
    
//    #codeTextBoxContainer {
//        
//        // maybe set padding for small outline?
//        padding-top: 30px;
//    }
//
//    #codeTextBox {
//        height: 150px;
//        width:  250px;
//        overflow: auto;
//        outline: @base03 thick;
//        background-color: @base2;
//
//        // maybe set background color?
//        // mabye set text color
//    }
    
//    #downloadCurrent {
//        float: left;
//        padding: 10px;
//        margin-left: 20px;
//        margin-bottom: 20px;   
//    }

    #newStudentFirst{
        left: -10px;
    }

    #newStudentLast{
        left: -10px;
    }

    #attendanceDiv {
        display: none;
    }

    .addStudentContent {
        position: absolute;
        width: 400px;
        height: 250px;
        z-index: 15;
        top: 50%;
        left: 50%;
        margin: -100px 0 0 -150px;
        padding-top: 10px;
        padding-bottom: 5px;
        padding-left: 10px;
        padding-right: 10px;
        display: none; /* Hidden by default */
        //position: fixed; /* Stay in place */
        //z-index: 1; /* Sit on top */
        //left: 0;
        //top: 0;
        //width: 50%; /* Full width */
        //height: 50%; /* Full height */
        overflow: auto; /* Enable scroll if needed */
        background-color: white; /* Fallback color */
        border: 2px solid black;
        //margin: auto;
    }

    #attendanceList {
        cursor:pointer;
    }


    #nameEnter {
        width: 310px;
        right: 10px;
        top: 100px;
    }

    #Attendance-Table {
        text-align: center;
        table-layout: fixed;
        //border: 2px solid @base2;
        border-collapse: collapse;
    }

    #masterAttendanceTable {
        //border: 2px solid @base2;
        border-collapse: collapse;
    }
}

#AttendanceCols {
    #login {
        padding-top: 10px;
    }
}

html {
    color: @base00;
    background-color:  @base3;
    font-family: "ff-din-web-pro-1", "ff-din-web-pro-2", sans-serif;
}

span:hover {
    color: red;
}

#storeDate {
    display: none;
}

//#download{
  //  position: relative;
  //  top: 8px;
  //  float: right;

//}

#aboveTable {
    width: 100%;
}







#returnAttendanceList {
    position: relative;
    top: 8px;
}

#suggestForm {
    position: relative;
    bottom: 8px;
}

#profileAttendanceTable {
    position: relative;
    top: 32px;
    width: 100%;
}

#attendanceColumnsTable {
    position: relative;
    top: 32px;
    width: 100%;
}

#columns {
    display: none;
}

#columnData {
    display: none;
}

#studentColumnsTable {
    position: relative;
    top: 32px;
    width: 100%;
}
#editProfile {
    position: absolute;
        width: 400px;
        height: 250px;
        z-index: 15;
        top: 50%;
        left: 50%;
        margin: -100px 0 0 -150px;
        padding-top: 10px;
        padding-bottom: 5px;
        padding-left: 10px;
        padding-right: 10px;
        display: none; /* Hidden by default */
        //position: fixed; /* Stay in place */
        //z-index: 1; /* Sit on top */
        //left: 0;
        //top: 0;
        //width: 50%; /* Full width */
        //height: 50%; /* Full height */
        overflow: auto; /* Enable scroll if needed */
        background-color: white; /* Fallback color */
        border: 2px solid black;
        //margin: auto;
}


#Home {
    #alertsListDiv {
        position: absolute;
        overflow: auto;
        border: 2px solid black;
        padding-right: 5px;
    }


    #alertPopup {
        position: absolute;
        width: 400px;
        height: 250px;
        z-index: 15;
        top: 50%;
        left: 50%;
        margin: -100px 0 0 -150px;
        padding-top: 10px;
        padding-bottom: 0px;
        padding-left: 10px;
        padding-right: 10px;
        display: none; /* Hidden by default */
        //position: fixed; /* Stay in place */
        //z-index: 1; /* Sit on top */
        //left: 0;
        //top: 0;
        //width: 50%; /* Full width */
        //height: 50%; /* Full height */
        overflow: auto; /* Enable scroll if needed */
        background-color: white; /* Fallback color */
        border: 2px solid black;
        //margin: auto;}
    }
}

#makeAlertPopup{
    position: absolute;
    width: 400px;
    height: 250px;
    z-index: 15;
    top: 50%;
    left: 50%;
    margin: -100px 0 0 -150px;
    padding-top: 10px;
    padding-bottom: 0px;
    padding-left: 10px;
    padding-right: 10px;
    display: none; /* Hidden by default */
    //position: fixed; /* Stay in place */
    //z-index: 1; /* Sit on top */
    //left: 0;
    //top: 0;
    //width: 50%; /* Full width */
    //height: 50%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: white; /* Fallback color */
    border: 2px solid black;
    //margin: auto;}
}

